Ajustes metodos